@@ -34,29 +34,48 @@ version = '1.0'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+ext {
+    isJU4 = System.properties['unitTests'] == 'junit4'
+    isTNG = System.properties['unitTests'] == 'testng'
+}
+
 configurations {
     t2b
-    cybench
+    aspectj
 }
 
 // https://docs.gradle.org/current/userguide/tutorial_java_projects.html
 // https://mvnrepository.com/
 
 dependencies {
-    compile 'com.google.auto.service:auto-service:1.0'
-    compile 'com.github.javaparser:javaparser-symbol-solver-core:3.23.1'
-    compile 'org.openjdk.jmh:jmh-core:1.32'
-    compile 'org.openjdk.jmh:jmh-generator-annprocess:1.32'
-    compile 'org.testng:testng:7.4.0'
-    compile 'junit:junit:4.13.2'
-    compile 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    compile files("${System.properties['java.home']}/../lib/tools.jar")
-    testCompile 'org.testng:testng:7.4.0'
-    testCompile 'junit:junit:4.13.2'
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    implementation 'com.google.auto.service:auto-service:1.0'
+    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.23.1'
+    implementation 'org.openjdk.jmh:jmh-core:1.33'
+    implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.33'
+    implementation 'org.testng:testng:7.4.0'
+    implementation 'junit:junit:4.13.2'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    implementation files("${System.properties['java.home']}/../lib/tools.jar")
+    // Needed to run JUnit5 tests
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-console-standalone:1.8.1'
+    // Needed by TestNG
+    testRuntimeOnly 'com.google.inject:guice:5.0.1'
+    // T2B runtime dependency
     t2b 'com.gocypher.cybench:cybench-t2b-agent:1.0.6-SNAPSHOT'
-    cybench 'com.gocypher.cybench.client:gocypher-cybench-runner:1.2-SNAPSHOT'
+    // To have agent reference
+    aspectj 'org.aspectj:aspectjweaver:1.9.7'
+}
+
+task copyClientLibs(type: Copy) {
+    from {
+        configurations.runtimeClasspath
+    }
+    from configurations.testRuntimeClasspath
+    from configurations.t2b
+    from jar
+    into 'libs'
+    include '*.jar'
 }
 
 test {
@@ -109,9 +128,9 @@ allprojects {
     }
 }
 
-task buildBenchmarksFromUnitTests(type: JavaExec, dependsOn: testClasses) {
+task runBenchmarksFromUnitTests(type: JavaExec, dependsOn: testClasses) {
     group = 'CyBench-T2B'
-    description = 'Run Test2Benchmark (T2B) benchmarks generator agent'
+    description = 'Run unit tests as JMH benchmarks'
     classpath = files(
             project.sourceSets.main.runtimeClasspath,
             project.sourceSets.test.runtimeClasspath,
@@ -125,58 +144,39 @@ task buildBenchmarksFromUnitTests(type: JavaExec, dependsOn: testClasses) {
 //    }
     if (JavaVersion.current().isJava9Compatible()) {
         jvmArgs = [
-                "-javaagent:\"${configurations.t2b.iterator().next()}\"",
+                "-javaagent:\"${configurations.aspectj.iterator().next()}\"",
                 '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
                 '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
         ]
     } else {
         jvmArgs = [
-                "-javaagent:\"${configurations.t2b.iterator().next()}\""
+                "-javaagent:\"${configurations.aspectj.iterator().next()}\""
         ]
     }
     systemProperties = [
-            't2b.build.dir': "$buildDir"
+            't2b.aop.cfg.path'     : "$project.projectDir/t2b/t2b.properties",
+            't2b.metadata.cfg.path': "$project.projectDir/t2b/metadata.properties"
     ]
-    main = 'com.gocypher.cybench.Test2Benchmark'
-}
 
-
-task runBenchmarksFromUnitTestsCybench(type: JavaExec, dependsOn: buildBenchmarksFromUnitTests) {
-    def benchRunProps = new Properties()
-    def pFile = file(".benchRunProps")
-    if (pFile.exists()) {
-        pFile.withInputStream { benchRunProps.load(it) }
-    }
-
-    def t2bClassPath = benchRunProps.getProperty('T2B_CLASS_PATH')
-    if (t2bClassPath != null) {
-        t2bClassPath = t2bClassPath.replaceAll("\"", "")
-    }
-
-    group = 'CyBench-T2B'
-    description = 'Run T2B generated JMH benchmarks over Cybench Launcher runner'
-    classpath = files(
-            project.sourceSets.main.runtimeClasspath,
-            project.sourceSets.test.runtimeClasspath,
-            [t2bClassPath],
-            configurations.cybench
-    )
-    if (JavaVersion.current().isJava9Compatible()) {
-        jvmArgs = [
-                '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
-                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
+    if (isJU4) {
+        //    ### Config for JUnit4 runner ###
+        main = 'org.junit.runner.JUnitCore'
+        args = [
+                'org.openjdk.jmh.generators.core.TestScopeBenchmarkGeneratorTestJU4'
+        ]
+    } else if (isTNG) {
+        //    ### Config for TestNG runner ###
+        main = 'org.testng.TestNG'
+        args = [
+                '-testclass', 'org.openjdk.jmh.generators.core.TestScopeBenchmarkGeneratorTestNG'
+        ]
+    } else {
+        //    ### Config for JUnit5 runner ###
+        main = 'org.junit.platform.console.ConsoleLauncher'
+        args = [
+                '-c', 'org.openjdk.jmh.generators.core.TestScopeBenchmarkGeneratorTest'
         ]
     }
-
-    //    ### Config for CyBench Launcher runner ###
-    main = 'com.gocypher.cybench.launcher.BenchmarkRunner'
-    args = [
-            'cfg=t2b/cybench-launcher.properties'
-    ]
-
-//    ### Config for JMH runner ###
-//    main = 'org.openjdk.jmh.Main'
-//    args = [
-//            '-f', '1', '-w', '5s', '-wi', '0', '-i', '1', '-r', '5s', '-t', '1', '-bm', 'Throughput'
-//    ]
 }
+
+build.finalizedBy(copyClientLibs)
